Set up the font sizes  do work

--- a/studentapp/src/assests/css/compo.css
+++ b/studentapp/src/assests/css/compo.css
@@ -25,3 +25,16 @@
 .profile{
     width: 75%;
 }
+
+.font-small {
+    font-size: 12px;
+  }
+  
+  .font-medium {
+    font-size: 18px; /* Default font size */
+  }
+  
+  .font-large {
+    font-size: 22px;
+  }
+  
