Add buttons to see the profile details as first, last,previous and next

--- a/studentapp/src/assests/css/compo.css
+++ b/studentapp/src/assests/css/compo.css
@@ -38,3 +38,14 @@
     font-size: 22px;
   }
   
+  /* Light Theme */
+.light .outerDiv {
+  background-color: #f0f0f0;
+  color: #000;
+}
+
+/* Dark Theme */
+.dark .outerDiv {
+  background-color: #2c2c2c;
+  color: #fff;
+}
